--- a/admin_addUserPage.html
+++ b/admin_addUserPage.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
@@ -91,9 +90,9 @@
                         </li>
                         <li class="nav-item active">
                             <a href="admin_addUserProfile.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <i class="nav-icon"><img src="img/add.svg"></i>
                                 <p class="navHeader">
-                                   Pending user profile
+                                    Pending user profile
 
                                 </p>
                             </a>
@@ -144,32 +143,32 @@
                     </div>
                     <div id="settings" style="padding: 30px;">
                         <form class="form-horizontal">
-<!--                            <div class="form-group row">
-                                <label for="inputUserName" class="col-sm-2 col-form-label">User Profile:</label>
-                                <div class="col-sm-4">
-                                    <select class="form-control" id="userUserProfile">
+                            <!--                            <div class="form-group row">
+                                                            <label for="inputUserName" class="col-sm-2 col-form-label">User Profile:</label>
+                                                            <div class="col-sm-4">
+                                                                <select class="form-control" id="userUserProfile">
 
-                                        <option>Reviewer</option>
-                                        <option>Author</option>
-                                        <option>User Admin</option>
-                                        <option>Conference Chair</option>
-                                    </select>
-                                </div>
-                            </div>-->
-<!--                            <div class="form-group row">
-                                <label for="inputUserName" class="col-sm-2 col-form-label">NRIC</label>
-                                <div class="col-sm-4">
-                                    <input type="text" class="form-control" id="admin_addNRIC">
+                                                                    <option>Reviewer</option>
+                                                                    <option>Author</option>
+                                                                    <option>User Admin</option>
+                                                                    <option>Conference Chair</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>-->
+                            <!--                            <div class="form-group row">
+                                                            <label for="inputUserName" class="col-sm-2 col-form-label">NRIC</label>
+                                                            <div class="col-sm-4">
+                                                                <input type="text" class="form-control" id="admin_addNRIC">
 
-                                </div>
-                            </div>-->
-<!--                            <div class="form-group row">
-                                <label for="inputUserName" class="col-sm-2 col-form-label">User Name:</label>
-                                <div class="col-sm-4">
+                                                            </div>
+                                                        </div>-->
+                            <!--                            <div class="form-group row">
+                                                            <label for="inputUserName" class="col-sm-2 col-form-label">User Name:</label>
+                                                            <div class="col-sm-4">
 
-                                    <input type="text" class="form-control" id="admin_addName">
-                                </div>
-                            </div>-->
+                                                                <input type="text" class="form-control" id="admin_addName">
+                                                            </div>
+                                                        </div>-->
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">Full Name:</label>
                                 <div class="col-sm-4">
@@ -203,7 +202,7 @@
                             <div class="form-group row">
                                 <label for="inputEmail" class="col-sm-2 col-form-label">Contact:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="admin_addContact" placeholder="Contact Number" min="8" maxlength="8">
+                                    <input type="tel" class="form-control" id="admin_addContact" placeholder="Contact Number" minlength="8" maxlength="8">
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -212,7 +211,7 @@
                                     <input type="email" class="form-control" id="admin_addEmail" placeholder="Email">
                                 </div>
                             </div>
-                        
+
                             <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#addUserModal">
                                 Add user
                             </button>
@@ -224,67 +223,66 @@
 
         </div>
     </div>
-    
+
     <div class="modal fade" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <div style="margin-top: 25px; float:left;width: 3px;height: 28px; background: #FED666;"></div>
-    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">User has been added successfully</p>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">User has been added successfully</p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>NRIC:&nbsp;</p>
+                    <div class="detail">
+                        <!-- get UserNRIC from DB-->
+                        <label id="addNRIC">Ab1234567</label>
                     </div>
-                    <div class="modal-body">
-                        <p>NRIC:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get UserNRIC from DB-->
-                            <label id="addNRIC">Ab1234567</label>
-                        </div>
-                        <p>User Profile:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get UserProfile from DB-->
-                            <label id="addUserProfile">User</label>
-                        </div>
+                    <p>User Profile:&nbsp;</p>
+                    <div class="detail">
+                        <!-- get UserProfile from DB-->
+                        <label id="addUserProfile">User</label>
+                    </div>
 
-                        <p>Password:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get UserAge from DB-->
-                            <label id="addPassword">.............</label>
-                        </div>
-                        <button type="button" style="float: right;" class="detail_action_btn">
-                            Ok
-                        </button
+                    <p>Password:&nbsp;</p>
+                    <div class="detail">
+                        <!-- get UserAge from DB-->
+                        <label id="addPassword">.............</label>
                     </div>
-                    <div class="modal-footer" style="border: none;">
-                    </div>
+                    <button type="button" style="float: right;" class="detail_action_btn">
+                        Ok
+                    </button>
+                </div>
+                <div class="modal-footer" style="border: none;">
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- ./wrapper -->
+    <!-- ./wrapper -->
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js "></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "></script>
+    <!-- AdminLTE -->
+    <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.js "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- getdatepicker -->
+    <!-- datatable -->
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js"></script>
 
-        <!-- jQuery -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js "></script>
-        <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "></script>
-        <!-- AdminLTE -->
-        <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.js "></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <!-- getdatepicker -->
-
-        <!-- datatable -->
-        <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
-        <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
-        <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
-
-        <script>
-            $(".nav .nav-link").on("click", function() {
-                $(".nav").find(".active").removeClass("active");
-                $(this).addClass("active");
-            });
-        </script>
+    <script>
+        $(".nav .nav-link").on("click", function () {
+            $(".nav").find(".active").removeClass("active");
+            $(this).addClass("active");
+        });
+    </script>
 </body>
 
 </html>
