--- a/admin_addUserProfile.html
+++ b/admin_addUserProfile.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <title>AdminLTE 3 | Dashboard</title> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontawesome-free@1.0.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-theme@0.1.0-beta.10/dist/select2-bootstrap.min.css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css">
@@ -147,8 +147,8 @@
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">User Profile:</label>
                                 <div class="col-sm-4">
-                                    <select class="form-control" id="userUserProfile">
-
+                                    <!--   <select class="form-control" id="userUserProfile">-->
+                                    <select class="form-control select2" id="userUserProfile"  data-dropdown-css-class="select2-purple"  multiple="multiple" style="width: 100%;">
                                         <option>Reviewer</option>
                                         <option>Author</option>
                                         <option>User Admin</option>
@@ -156,7 +156,7 @@
                                     </select>
                                 </div>
                             </div>
-                           
+
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">Full Name:</label>
                                 <div class="col-sm-4">
@@ -164,7 +164,7 @@
                                     <input type="text" class="form-control" id="admin_addFullName">
                                 </div>
                             </div>
-                            
+
 
                             <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#addUserModal">
                                 Add user profile
@@ -229,12 +229,21 @@
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js"></script>
     <script>
-            $(".nav .nav-link").on("click", function() {
-                $(".nav").find(".active").removeClass("active");
-                $(this).addClass("active");
+        $(".nav .nav-link").on("click", function () {
+            $(".nav").find(".active").removeClass("active");
+            $(this).addClass("active");
+        });
+        $(function () {
+            //Initialize Select2 Elements
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
             });
+        })
     </script>
 </body>
 
