--- a/admin_searchUserPage.html
+++ b/admin_searchUserPage.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <!-- <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
@@ -181,7 +180,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                  <!--              <td>S12345678</td>-->
+                                <!--              <td>S12345678</td>-->
                                 <td>Mike Doe</td>
                                 <td>Author</td>
 
@@ -220,8 +219,8 @@
                     </div>
                     <!--<p>NRIC:&nbsp;</p>
                     <div class="detail">-->
-                        <!-- get userID from DB-->
-                        <!--<label class="admin_searchUserNRIC">Ab1234567</label>
+                    <!-- get userID from DB-->
+                    <!--<label class="admin_searchUserNRIC">Ab1234567</label>
                     </div>-->
                     <p>Username:&nbsp;</p>
                     <div class="detail">
@@ -256,9 +255,9 @@
                     <button type="button" class="blue_btn" data-toggle="modal" data-target="#editModal" id="editDetail_btn">
                         Edit Detail
                     </button>
-<!--                    <button type="button" class="red_btn" data-toggle="modal" data-target="#deleteModal">
-                        delete user
-                    </button>-->
+                    <!--                    <button type="button" class="red_btn" data-toggle="modal" data-target="#deleteModal">
+                                            delete user
+                                        </button>-->
 
                 </div>
                 <div class="modal-footer" style="border: none;">
@@ -279,28 +278,28 @@
                 <div class="modal-body">
                     <!--<p>NRIC:&nbsp;</p>
                     <div class="detail">-->
-                        <!-- get userID from DB-->
-                        <!--<label class="deleteUserNRIC">Ab1234567</label>-->
-                    </div>
-                    <p>User Profile:&nbsp;</p>
-                    <div class="detail">
-                        <!-- get userName from DB-->
-                        <label class="deleteUserProfile">Author</label>
-                    </div>
-                    <p class="deleteText">Deleting this person’s account will remove all their data from this system ,including user infomations and records.</p>
+                    <!-- get userID from DB-->
+                    <!--<label class="deleteUserNRIC">Ab1234567</label>-->
+                </div>
+                <p>User Profile:&nbsp;</p>
+                <div class="detail">
+                    <!-- get userName from DB-->
+                    <label class="deleteUserProfile">Author</label>
+                </div>
+                <p class="deleteText">Deleting this person’s account will remove all their data from this system ,including user infomations and records.</p>
 
 
-                    <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
-                        Cancel
-                    </button>
-                    <button type="button" style="float: right;background-color: #F7685B;color: white;" class="blue_btn" data-toggle="modal" data-target="#deleteModal">
-                        Confirm Deletion
-                    </button>
-                </div>
-                <div class="modal-footer" style="border: none;">
-                </div>
+                <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
+                    Cancel
+                </button>
+                <button type="button" style="float: right;background-color: #F7685B;color: white;" class="blue_btn" data-toggle="modal" data-target="#deleteModal">
+                    Confirm Deletion
+                </button>
+            </div>
+            <div class="modal-footer" style="border: none;">
             </div>
         </div>
+    </div>
     </div>
     <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="z-index:1060">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -344,8 +343,8 @@
                     <!--<div class="edit-group">
                         <p>NRIC:&nbsp;</p>
                         <div class="detail">-->
-                            <!-- get userNRIC from DB-->
-                            <!--<label id="admin_editNRIC">Ab1234567</label>
+                    <!-- get userNRIC from DB-->
+                    <!--<label id="admin_editNRIC">Ab1234567</label>
                         </div>
                     </div>-->
                     <div class="edit-group">
@@ -366,7 +365,7 @@
                         <p>User Profile:&nbsp;</p>
                         <div class="detail">
                             <!-- get userName from DB-->
-                            <select class="form-control" style="width: 200px;display: inline-block" id="admin_editUserProfile"">
+                            <select class="form-control" style="width: 200px;display: inline-block" id="admin_editUserProfile" ">
                                 <option>Reviewer</option>
                                 <option>Author</option>
                                 <option>User Admin</option>
@@ -390,9 +389,9 @@
                         <p>Sex:&nbsp;</p>
                         <div class="detail">
                             <!--       <input type="radio" class="sex_input" id="admin_editFemale" name="sex" value="F">
-           <label for="female" class="sex_label">F</label>
-           <input type="radio" class="sex_input" id="male" name="sex" value="M">
-           <label for="male" class="sex_label">M</label><br>-->
+                            <label for="female" class="sex_label">F</label>
+                            <input type="radio" class="sex_input" id="male" name="sex" value="M">
+                            <label for="male" class="sex_label">M</label><br>-->
                             <label class="admin_editGender">F</label>
 
                         </div>
@@ -414,7 +413,7 @@
                         <div class="detail">
                             <!-- get userName from DB-->
                             <input type="text" class="form-control" id="admin_editContact">
-                        </div>  
+                        </div>
                     </div>
                     <div class="edit-group">
                         <p>Email:&nbsp;</p>
@@ -450,6 +449,7 @@
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js"></script>
 
     <script>
         $(".nav .nav-link").on("click", function () {
