--- a/CSIT314/boundary/author_profilePage.html
+++ b/CSIT314/boundary/author_profilePage.html
@@ -80,39 +80,36 @@
                 <nav class=" mt-2 ">
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu" data-accordion="false ">
                         <li class="nav-item">
-                            <a href="admin_addUserPage.html" class="nav-link">
+                            <a href="author_mainPage.html" class="nav-link">
+                                <i class="nav-icon"><img src="img/nav_home_icon.svg"></i>
+                                <p class="navHeader">
+                                    Home
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="img/add.svg"></i>
                                 <p class="navHeader">
-                                    Add user
+                                    Add paper
                                 </p>
                             </a>
+
                         </li>
                         <li class="nav-item active">
-                            <a href="admin_addUserProfile.html" class="nav-link">
+                            <a href="" class="nav-link">
+                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <p class="navHeader">
+                                    Search paper
+                                </p>
+                            </a>
+
+                        </li>
+                        <li class="nav-item active">
+                            <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
-                                    Add user profile
-
-                                </p>
-                            </a>
-
-                        </li>
-                        <li class="nav-item active">
-                            <a href="admin_searchUserPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
-                                <p class="navHeader">
-                                    Search user
-
-                                </p>
-                            </a>
-
-                        </li>
-                        <li class="nav-item active">
-                            <a href="admin_searchUserProfilePage.html" class="nav-link">
-                                <i class="nav-icon"><img src="img/search.svg"></i>
-                                <p class="navHeader">
-                                    Search user profile
-
+                                    View submitted paper
                                 </p>
                             </a>
 
