--- a/CSIT314/boundary/admin_profilePage.html
+++ b/CSIT314/boundary/admin_profilePage.html
@@ -163,7 +163,7 @@
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="admin_profilePassword" placeholder="Password">
+                                    <input type="password" class="form-control" id="admin_profilePassword">
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -187,13 +187,13 @@
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Contact Number:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="admin_profileContact" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" id="admin_profileContact">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control " id="admin_profileEmail" placeholder="Email">
+                                    <input type="email" class="form-control " id="admin_profileEmail">
                                 </div>
                             </div>
                             <div class="form-group row">
