--- a/CSIT314/boundary/author_profilePage.html
+++ b/CSIT314/boundary/author_profilePage.html
@@ -78,7 +78,7 @@
                 <hr color="#EBEFF2" style="border:1; margin-top:35px; opacity: 0.8;">
 
                 <nav class=" mt-2 ">
-                    <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu" data-accordion="false ">
+                    <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
                         <li class="nav-item">
                             <a href="author_mainPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/nav_home_icon.svg"></i>
@@ -88,7 +88,7 @@
                             </a>
                         </li>
                         <li class="nav-item active">
-                            <a href="" class="nav-link">
+                            <a href="author_addPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/add.svg"></i>
                                 <p class="navHeader">
                                     Add paper
@@ -109,14 +109,21 @@
                             <a href="" class="nav-link">
                                 <i class="nav-icon"><img src="img/file.png"></i>
                                 <p class="navHeader">
-                                    View submitted paper
+                                    View paper
                                 </p>
                             </a>
-
+                        </li>
+                        <li class="nav-item active">
+                            <a href="" class="nav-link">
+                                <i class="nav-icon"><img src="img/email.png"></i>
+                                <p class="navHeader">
+                                    View email
+                                </p>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
-                            <a href="admin_profilePage.html" class="nav-link ">
+                            <a href="author_profilePage.html" class="nav-link ">
                                 <i class="nav-icon"><img src="img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
@@ -160,7 +167,7 @@
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="admin_profilePassword" placeholder="Password">
+                                    <input type="password" class="form-control" id="admin_profilePassword">
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -184,13 +191,13 @@
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Contact Number:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="admin_profileContact" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" id="admin_profileContact">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control " id="admin_profileEmail" placeholder="Email">
+                                    <input type="email" class="form-control " id="admin_profileEmail">
                                 </div>
                             </div>
                             <div class="form-group row">
