--- a/CSIT314/boundary/author_addPaperPage.html
+++ b/CSIT314/boundary/author_addPaperPage.html
@@ -124,7 +124,7 @@
 
                         </li>
                         <li class="nav-item active">
-                            <a href="" class="nav-link">
+                            <a href="author_searchPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/search.svg"></i>
                                 <p class="navHeader">
                                     Search paper
@@ -133,15 +133,7 @@
 
                         </li>
                         <li class="nav-item active">
-                            <a href="" class="nav-link">
-                                <i class="nav-icon"><img src="img/file.png"></i>
-                                <p class="navHeader">
-                                    View paper
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a href="" class="nav-link">
+                            <a href="author_emailPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/email.png"></i>
                                 <p class="navHeader">
                                     View email
